@@ -1,0 +1,6 @@
+/**
+ * Author: ZhangChunsheng
+ * Date: 2013-10-19
+ * Description: commandUtil
+ */
+var commandUtil = module.exports;
