@@ -28,3 +28,16 @@ roleTest.testGetMainPlayerCommand = function() {
         console.log(stdout);
     });
 }
+
+roleTest.testCreateMainPlayer = function() {
+    exec(utils.makeABCommand({
+        verbosity: 2,
+        requests: 1,
+        concurrency: 1,
+        cookie: "connect.sid=s%3AYcm7d4MODUTacVVyDk6r69Gq.eJrQ4paS43jjOvnSfB74he0R3mVeQZUcIhIO4x11tVw",
+        url: "http://192.168.1.22:4011/role/getMainPlayer",
+        output: "test.txt"
+    }), function(err, stdout, stderr) {
+        console.log(stdout);
+    });
+}
