@@ -7,6 +7,9 @@
 [seaking_serverTest_1.0.0.1 2013-10-18 张春生]
 1、新功能：增加自动注册和认证功能
 
+[seaking_serverTest_1.0.0.1 2013-10-19 张春生]
+1、新功能：增加自动注册ab测试
+
 --备注分类
 1、新功能：
 2、Bug:
